<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.imagemanageapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_image"
        android:name="com.example.imagemanageapp.ui.image.ImageFragment"
        android:label="@string/menu_image"
        tools:layout="@layout/fragment_image" />

    <fragment
        android:id="@+id/nav_recommend"
        android:name="com.example.imagemanageapp.ui.recommend.RecommendFrament"
        android:label="@string/menu_recommend"
        tools:layout="@layout/fragment_recommend" />

    <fragment
        android:id="@+id/nav_mypage"
        android:name="com.example.imagemanageapp.ui.mypage.MypageFragment"
        android:label="@string/menu_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.example.imagemanageapp.ui.trash.TrashFrament"
        android:label="@string/menu_trash"
        tools:layout="@layout/fragment_trash" />
</navigation>